fix: Icon color in pay now pay later for dark mode

--- a/src/features/counterfactual/styles.module.css
+++ b/src/features/counterfactual/styles.module.css
@@ -21,6 +21,12 @@
   font-weight: bold;
 }
 
+.listItem {
+  min-width: 0;
+  margin-right: var(--space-1);
+  color: var(--color-primary-main);
+}
+
 .active .radioSubtitle {
   color: var(--color-text-primary);
 }
